2012-10-16 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/intro.xml: merging latest changes
    * VERSION,configure.ac: setting version as 2.1.0

2012-10-16 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/directives.xml,doc/xml/commands.xml,doc/xml/install.xml,doc/xml/examples.xml,
    doc/xml/request.xml,doc/convert_examples.tcl.in,doc/examples-sgml/hello1.rvt: Trying to
    improve the manual revising and extending it

2012-10-01 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/request.xml,doc/xml/install.xml: attempting to improve the documentation
    * doc/images/: Adding missing icons
    * Changelog: merging from trunk before feature freeze for 2.1

2012-09-30 Massimo Manghi <mxmanghi@apache.org>
    * tests/parsepackage.test: changed path to librivetparser.so

2012-09-29 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/xml.tcl: Adding command for simple quick XML fragments generation

2012-09-22 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/dio.tcl: various methods used as
    accessors to some property variables of the class Database were not returning their values
    as expeected. This also surfaced a bug in method 'string' where a result object wasn't
    used correctly. Method 'count' failed when no keyfield was set. Since it should be possible
    to call this method also when there is no keyfield defined private method table_check is 
    returning specific error codes making possible to catch this error and ignore 
    it in 'count' (fixed bugs #53733 and #53732)
    * rivet/packages/dio/dio_Sqlite.tcl: Class Sqlite did not set the variable 'interface' to
    value 'Sqlite' as expected.

2012-09-21 Massimo Manghi <mxmanghi@apache.org>
    * doc/README: improved instruction for code examples inclusion into XML manual
    * doc/rivet-full.xml: removed

2012-09-18 Massimo Manghi <mxmanghi@apache.org>
    * rivet/pkgIndex.tcl: index file regenerated

2012-09-17 Massimo Manghi <mxmanghi@apache.org>