@@ -1,3 +1,7 @@
+2012-10-28 Massimo Manghi <mxmanghi@apache.org>
+    * doc/xml/commands.xml: Manual entry for makeurl extented to clarify how the
+    protocol is determined.
+
 2012-10-16 Massimo Manghi <mxmanghi@apache.org>
     * doc/xml/intro.xml: merging latest changes
     * VERSION,configure.ac: setting version as 2.1.0
